add toys, foods, and join table routes

--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
     </div>
 
 
-
-
-
+    <!-- MOOD STUFF -->
     <div class="report-container">
       <!-- <h2 class="page-title">Seen Mossy lately? Report her latest mood below.</h2> -->
       <h2 class="page-title"></h2>
