update dropdown title by id

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       </header>
 
       <div class="main">
-        <section id='userList'></section>
 
         <!-- Average Moods -->
         <div id="avg-moods" class="row">
@@ -101,6 +100,9 @@
           </div>
         </div>
       </div>
+
+
+      <section id='userList'></section>
 
     </div>
 
@@ -222,8 +224,8 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a id="All-Users" class="dropdown-item" href="#">All Users</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a id="Another-Action" class="dropdown-item" href="#">Another action</a>
+              <a id="Something-Else-Here" class="dropdown-item" href="#">Something else here</a>
             </div>
           </div>
 
