fix table repeat bug

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="home-container">
       <header>
         <h1>Mossy Mood Tracker :)</h1>
-        <p>Track Mossy's Average Mood</p>
+        <!-- <p>Track Mossy's Average Mood</p> -->
       </header>
 
       <div class="main">
@@ -83,19 +83,19 @@
 
           <div class="row lastData">
             <div class="col-sm">
-              <p class="lastUser">User</p>
+              <p class="lastUser"></p>
             </div>
             <div class="col-sm">
-              <p class="lastTimeOfDay">TimeOfDay</p>
+              <p class="lastTimeOfDay"></p>
             </div>
             <div class="col-sm">
-              <p class="lastMood">Mood</p>
+              <p class="lastMood"></p>
             </div>
             <div class="col-sm">
-              <p class="lastToy">Toy</p>
+              <p class="lastToy"></p>
             </div>
             <div class="col-sm">
-              <p class="lastFood">Food</p>
+              <p class="lastFood"></p>
             </div>
           </div>
         </div>
@@ -238,6 +238,7 @@
             <table class="table table-striped">
               <thead>
                 <tr>
+                  <th>#</th>
                   <th>First Name</th>
                   <th>Last Name</th>
                   <th>Time of Day</th>
