populate average moods on home

--- a/index.html
+++ b/index.html
@@ -51,14 +51,17 @@
           <div class="col-sm">
             <p class=avg-title>Morning</p>
             <img src="http://via.placeholder.com/250x250" class="avg-morning" alt="morning-image">
+            <p class = "morning-p"></p>
           </div>
           <div class="col-sm">
             <p class=avg-title>Afternoon</p>
             <img src="http://via.placeholder.com/250x250" class="avg-afternoon" alt="afternoon-image">
+            <p class = "afternoon-p"></p>
           </div>
           <div class="col-sm">
             <p class=avg-title>Evening</p>
             <img src="http://via.placeholder.com/250x250" class="avg-evening" alt="evening-image">
+            <p class = "evening-p"></p>
           </div>
         </div>
       </div>
