fix mood name bug

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </div>
               <div id="Sassy" class="col-sm">
                 <img src="/images/mossy/sassy-mossy.jpg" alt="sassy-mossy">
-                <p>Sassy/Playful</p>
+                <p>Sassy</p>
               </div>
             </div>
 
