--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           <h6>Mossy's Average Moods</h6>
           <div class="col-sm">
             <p class=avg-title>Morning</p>
-            <img src="http://via.placeholder.com/250x250" class="avg-morning" alt="morning-image">
+            <img src="" class="avg-morning" alt="morning-image">
             <p class = "morning-p"></p>
           </div>
           <div class="col-sm">
             <p class=avg-title>Afternoon</p>
-            <img src="http://via.placeholder.com/250x250" class="avg-afternoon" alt="afternoon-image">
+            <img src="" class="avg-afternoon" alt="afternoon-image">
             <p class = "afternoon-p"></p>
           </div>
           <div class="col-sm">
             <p class=avg-title>Evening</p>
-            <img src="http://via.placeholder.com/250x250" class="avg-evening" alt="evening-image">
+            <img src="" class="avg-evening" alt="evening-image">
             <p class = "evening-p"></p>
           </div>
         </div>
@@ -108,11 +108,11 @@
           <!-- First & Last Name -->
           <form>
             <div id="form" class="row">
-              <div class="col-4">
+              <div class="col-6">
                 <label for="firstname">First name<span style="color:red">*</span></label>
                 <input id="firstName" type="text" class="form-control" placeholder="First name" autofocus="autofocus" required>
               </div>
-              <div class="col-4">
+              <div class="col-6">
                 <label for="lastname">Last name<span style="color:red">*</span></label>
                 <input id="lastName" type="text" class="form-control" placeholder="Last name" required>
               </div>
@@ -266,9 +266,6 @@
 
             </table>
           </div>
-
-          <section id='moodsList'></section>
-
         </div>
 
       </div>
